# Minipypy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.ps1  pyproject.toml  requirements.txt
.github/workflows/: windows-build.yml  windows-wheel.yml
docs/: architecture.md
examples/: benchmark.py  linear_regression.py  mnist_adam.py  mnist_linear.py  nn_linear_reg.py
future/: tensorfold.md
minipypy/: __init__.py
minipypy/nn/: __init__.py  functional.py  losses.py  modules.py
minipypy/optim/: adam.py  sgd.py
src/: autograd.cpp  autograd.cu  autograd.h  bindings.cpp  memory_pool.cpp  memory_pool.h  tensor.cpp  tensor.cu  tensor.h
tests/: test_adam.py  test_autograd.py  test_backend.py  test_bce_with_logits_loss.py  test_big_tensors.py  test_cross_entropy_loss.py  test_hinge_loss.py  test_mnist_smoke.py  test_nn.py  test_optim.py  test_relu.py  test_scalar_autograd.py  test_scalar_ops.py  test_sequential.py  test_softmax.py  test_sqrt.py  test_tensorfold_linear.py  test_training.py
