[build-system]
requires = [
  "scikit-build-core>=0.10",
  "pybind11>=2.12",
  "cmake>=3.18",
  "ninja",
  "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "minipypy"
version = "0.8.0"
description = "A PyTorch-inspired tensor framework built from scratch using C++, CUDA, and pybind11."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Mridul Bajpai" }
]
keywords = ["cuda", "c-plus-plus", "python", "tensor", "deep-learning", "pybind11"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: C++",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.scikit-build]
wheel.packages = ["minipypy"]
cmake.build-type = "Release"
